--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         go-version: 1.17
 
+    - name: Get
+      run: go get
+
     - name: Build
       run: go build -v ./...
 
