--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,25 @@
-name: Go
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+name: build
+on: push
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
-
-    - name: Get
-      run: go get
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+      - uses: actions/checkout@v2
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install gcc libgl1-mesa-dev libegl1-mesa-dev libgles2-mesa-dev libx11-dev xorg-dev
+      - uses: WillAbides/setup-go-faster@v1.7.0
+        with:
+          go-version: '1.17.x'
+      - name: Generate assets
+        run: |
+          go install fyne.io/fyne/v2/cmd/fyne@latest
+          echo "go generate"
+          go generate -v ./...
+          echo "Git status"
+          git status --short
+          # Ensure repo clean after go generate
+          git diff-index --quiet HEAD --
+      - name: Build
+        run: go build -v ./...
+      - name: Test
+        run: go test -v ./...
