--- a/.github/workflows/deps_check.yml
+++ b/.github/workflows/deps_check.yml
@@ -14,4 +14,4 @@ jobs:
         run: go install lucor.dev/lian@latest
 
       - name: Check license of dependencies against go.mod
-        run: lian -d --allowed="Apache-2.0, BSD-2-Clause, BSD-3-Clause, MIT"
+        run: lian -d --allowed="Apache-2.0, BSD-2-Clause, BSD-3-Clause, MIT, ISC"
